# musys-ir

./: .gitignore  README.md  meson.build
csource/: musys-backtrace.c
include/: musys-backtrace.h  musys-base.h
src/: meson.build
src/adt/: dsu.vala  gee-array-slice.vala  tree-view.vala  vec-stack.vala
src/base/: algorithm.vala  apint.vala  base.vala  exception.vala  fmt.vala  gee-array-slice.vala  hash.vala  reflist.vala  stdc.vala  stream.vala
src/ir/: basic-block-terminator.vala  basic-block.vala  const-aggregate.vala  const-array.vala  const-data.vala  const-expr.vala  const-index.vala  const-ptr-null.vala  const-struct.vala  const-undefined.vala  constant.vala  function.vala  global-alias.vala  global-object.vala  global-variable.vala  instruction-alloca.vala  instruction-binary-select.vala  instruction-binary.vala  instruction-branch.vala  instruction-call-base.vala  instruction-call.vala  instruction-cast.vala  instruction-compare.vala  instruction-index-base.vala  instruction-index-extract.vala  instruction-index-insert.vala  instruction-index-ptr.vala  instruction-jump-base.vala  instruction-jump.vala  instruction-list.vala  instruction-load.vala  instruction-phi.vala  instruction-return.vala  instruction-store.vala  instruction-switch.vala  instruction-unary.vala  instruction-unreachable.vala  instruction.vala  ipointer-storage.vala  ivalue-visitor.vala  (+3 more)
src/ir-util/: basicblock.vala  clone-function.vala  dataflow-printer.vala  instruction.vala  module.vala  value-type-index.vala  value.vala  valueref-compress.vala  writer.vala
src/optimize/: ipass.vala  optimize.vala  pass.vala
src/optimize/control-flow/: README.md  dfs-sequence.vala  dfs-tree.vala  dominance-tree.vala
src/optimize/data-flow/: README.md
src/type/: aggregate-type.vala  function-type.vala  platform.vala  primitive-type.vala  ref-type.vala  struct-type.vala  type-context.vala  type.vala  value-type.vala  vector-type.vala
